<resources>
    <string name="app_name">R6S Companion</string>
    <string name="title_compare">Compare</string>
    <string name="title_operators">Operators</string>
    <string name="title_search">Search</string>
    <string name="title_more">More</string>
    <string name="title_profile">Profile</string>
    <string name="profileLogo">profilelogo</string>
    <string name="search_hint">Enter Username…</string>
    <string-array name="platform_array">
        <item>PC</item>
        <item>Xbox</item>
        <item>PS4</item>
    </string-array>
    <string-array name="languages_array">
        <item>English</item>
    </string-array>
    <string-array name="theme_array">
        <item>Dark</item>
    </string-array>
    <string name="levelShort">Lvl</string>
    <string name="level">Level</string>
    <string name="generalTitle">General</string>
    <string name="generalKills">Kills</string>
    <string name="generalDeaths">Deaths</string>
    <string name="generalAssists">Assists</string>
    <string name="generalKD">K/D</string>
    <string name="generalWins">Wins</string>
    <string name="generalLosses">Losses</string>
    <string name="generalPlayed">Played</string>
    <string name="generalWL">Win%</string>
    <string name="generalRevives">Revives</string>
    <string name="generalSuicides">Suicides</string>
    <string name="generalMelee">Melee Kills</string>
    <string name="generalTimePlayed">Play Time</string>
    <string name="casualTitle">Casual</string>
    <string name="casualKills">Kills</string>
    <string name="casualDeaths">Deaths</string>
    <string name="casualKD">K/D</string>
    <string name="casualWins">Wins</string>
    <string name="casualLosses">Losses</string>
    <string name="casualWL">Win%</string>
    <string name="casualPlayed">Played</string>
    <string name="casualLevel">Level</string>
    <string name="casualTimePlayed">Play Time</string>
    <string name="rankedTitle">Ranked</string>
    <string name="rankedAbandons">Abandons</string>
    <string name="rankedMaxRank">Max Rank</string>
    <string name="rankedMaxMMR">Max MMR</string>
    <string name="rankedRank">Rank</string>
    <string name="rankedRegion">Region</string>
    <string name="placementsGlobal">Global</string>
    <string name="placementsAPAC">Asia</string>
    <string name="placementsEMEA">Europe</string>
    <string name="placementsNCSA">America</string>
    <string name="weaponTitle">Weapon</string>
    <string name="weaponHeadshot">Head Shots</string>
    <string name="weaponHeadshotHit">HS / Hit%</string>
    <string name="weaponHeadshotKills">HS / Kills%</string>
    <string name="weaponAccuracy">Accuracy</string>
    <string name="weaponBulletsHit">Bullets Hit</string>
    <string name="weaponBulletsFired">Bullets Fired</string>
    <string name="weaponMeleeKills">Melee Kills</string>
    <string name="weaponPenetrationKills">Penetrations</string>
    <string name="miscDBNO">DBNO</string>
    <string name="miscDBNOAssists">DBNO Assists</string>
    <string name="miscBarricade">Barricades</string>
    <string name="miscReinforcement">Reinforcements</string>
    <string name="miscAlphaPack">Alpha Pack</string>
    <string name="miscGadgetsDestroyed">Gadgets Destroyed</string>
    <string name="miscRevives">Revives</string>
    <string name="miscRevivesDenied">Revives Denied</string>
    <string name="miscSuicides">Suicides</string>
    <string name="miscTitle">Misc</string>
    <string name="miscRappelBreaches">Rappel Breaches</string>
    <string name="miscBlindFires">Blind Kills</string>
    <string name="gamemodeTitle">Gamemodes</string>
    <string name="gamemodeBestScore">Best Score</string>
    <string name="secureAreaTitle">Secure Area</string>
    <string name="hostageTitle">Hostage</string>
    <string name="bombTitle">Bomb</string>
    <string name="operatorXP">Total XP</string>
    <string name="operatorKR">Kills/Round</string>
    <string name="operatorSpecial1">Special 1</string>
    <string name="operatorSpecial2">Special 2</string>
    <string name="operatorSpecial3">Special 3</string>
    <string name="moreDefaultName">Default Name:</string>
    <string name="moreDefaultPlatform">Default Platform:</string>
    <string name="moreColourScheme">Colour Scheme:</string>
    <string name="moreLanguage">Language:</string>
    <string name="moreSupport">Support</string>
    <string name="moreContact">Contact</string>
    <string name="moreFAQ">FAQ</string>
    <string name="moreFeedback">Give Feedback</string>
    <string name="morePlayStore">Play Store Review</string>
    <string name="moreSystem">System</string>
    <string name="moreVersionNo">Version Number: 1.0</string>
    <string name="moreLastUpdate">Last Updated: 29th May 2018</string>
    <string name="moreMinAPI">Minimum Version: Android 4.4 Kitkat</string>
    <string name="moreRemoveAds">Remove Ads: £0.75</string>
    <string-array name="overallStats">
        <item>generalpvp_accuracy</item>
        <item>generalpvp_barricadedeployed</item>
        <item>generalpvp_blindkills</item>
        <item>generalpvp_bulletfired</item>
        <item>generalpvp_bullethit</item>
        <item>generalpvp_dbno</item>
        <item>generalpvp_dbnoassists</item>
        <item>generalpvp_death</item>
        <item>generalpvp_gadgetdestroy</item>
        <item>generalpvp_headshot</item>
        <item>generalpvp_hostagedefense</item>
        <item>generalpvp_hostagerescue</item>
        <item>generalpvp_killassists</item>
        <item>generalpvp_kills</item>
        <item>generalpvp_matchlost</item>
        <item>generalpvp_matchplayed</item>
        <item>generalpvp_matchwon</item>
        <item>generalpvp_meleekills</item>
        <item>generalpvp_penetrationkills</item>
        <item>generalpvp_rappelbreach</item>
        <item>generalpvp_reinforcementdeploy</item>
        <item>generalpvp_revive</item>
        <item>generalpvp_serveraggression</item>
        <item>generalpvp_serverdefender</item>
        <item>generalpvp_servershacked</item>
        <item>generalpvp_suicide</item>
        <item>generalpvp_timeplayed</item>
        <item>generalpvp_totalxp</item>
        <item>casualpvp_death</item>
        <item>casualpvp_kdratio</item>
        <item>casualpvp_kills</item>
        <item>casualpvp_matchlost</item>
        <item>casualpvp_matchplayed</item>
        <item>casualpvp_matchwlratio</item>
        <item>casualpvp_matchwon</item>
        <item>casualpvp_timeplayed</item>
        <item>rankedpvp_death</item>
        <item>rankedpvp_kdratio</item>
        <item>rankedpvp_kills</item>
        <item>rankedpvp_matchlost</item>
        <item>rankedpvp_matchplayed</item>
        <item>rankedpvp_matchwlratio</item>
        <item>rankedpvp_matchwon</item>
        <item>rankedpvp_timeplayed</item>
        <item>secureareapvp_bestscore</item>
        <item>secureareapvp_matchlost</item>
        <item>secureareapvp_matchplayed</item>
        <item>secureareapvp_matchwon</item>
        <item>secureareapvp_timeplayed</item>
        <item>rescuehostagepvp_bestscore</item>
        <item>rescuehostagepvp_matchlost</item>
        <item>rescuehostagepvp_matchplayed</item>
        <item>rescuehostagepvp_matchwon</item>
        <item>rescuehostagepvp_timeplayed</item>
        <item>plantbombpvp_bestscore</item>
        <item>plantbombpvp_matchlost</item>
        <item>plantbombpvp_matchplayed</item>
        <item>plantbombpvp_matchwon</item>
        <item>plantbombpvp_timeplayed</item>
    </string-array>
    <string-array name="operators">
        <item>operatorpvp_dbno</item>
        <item>operatorpvp_death</item>
        <item>operatorpvp_headshot</item>
        <item>operatorpvp_kills</item>
        <item>operatorpvp_meleekills</item>
        <item>operatorpvp_roundlost</item>
        <item>operatorpvp_roundplayed</item>
        <item>operatorpvp_roundwon</item>
        <item>operatorpvp_timeplayed</item>
    </string-array>
    <string-array name="specialoperators">
        <item>operatorpvp_ash_bonfirekill</item>
        <item>operatorpvp_ash_bonfirewallbreached</item>
        <item>operatorpvp_attackerdrone_diminishedrealitymode</item>
        <item>operatorpvp_bandit_batterykill</item>
        <item>operatorpvp_black_mirror_gadget_deployed</item>
        <item>operatorpvp_blackbeard_gunshieldblockdamage</item>
        <item>operatorpvp_blitz_flashedenemy</item>
        <item>operatorpvp_blitz_flashfollowupkills</item>
        <item>operatorpvp_blitz_flashshieldassist</item>
        <item>operatorpvp_buck_kill</item>
        <item>operatorpvp_capitao_lethaldartkills</item>
        <item>operatorpvp_capitao_smokedartslaunched</item>
        <item>operatorpvp_castle_kevlarbarricadedeployed</item>
        <item>operatorpvp_caltrop_enemy_affected</item>
        <item>operatorpvp_caveira_interrogations</item>
        <item>operatorpvp_cazador_assist_kill</item>
        <item>operatorpvp_concussiongrenade_detonate</item>
        <item>operatorpvp_concussionmine_detonate</item>
        <item>operatorpvp_dazzler_gadget_detonate</item>
        <item>operatorpvp_doc_hostagerevive</item>
        <item>operatorpvp_doc_selfrevive</item>
        <item>operatorpvp_doc_teammaterevive</item>
        <item>operatorpvp_echo_enemy_sonicburst_affected</item>
        <item>operatorpvp_frost_dbno</item>
        <item>operatorpvp_fuze_clusterchargekill</item>
        <item>operatorpvp_glaz_sniperkill</item>
        <item>operatorpvp_glaz_sniperpenetrationkill</item>
        <item>operatorpvp_hibana_detonate_projectile</item>
        <item>operatorpvp_iq_gadgetspotbyef</item>
        <item>operatorpvp_jager_gadgetdestroybycatcher</item>
        <item>operatorpvp_kapkan_boobytrapdeployed</item>
        <item>operatorpvp_kapkan_boobytrapkill</item>
        <item>operatorpvp_montagne_shieldblockdamage</item>
        <item>operatorpvp_mute_gadgetjammed</item>
        <item>operatorpvp_mute_jammerdeployed</item>
        <item>operatorpvp_pulse_heartbeatassist</item>
        <item>operatorpvp_pulse_heartbeatspot</item>
        <item>operatorpvp_rook_armorboxdeployed</item>
        <item>operatorpvp_rook_armortakenourself</item>
        <item>operatorpvp_rook_armortakenteammate</item>
        <item>operatorpvp_rush_adrenalinerush</item>
        <item>operatorpvp_sledge_hammerhole</item>
        <item>operatorpvp_sledge_hammerkill</item>
        <item>operatorpvp_smoke_poisongaskill</item>
        <item>operatorpvp_tachanka_turretdeployed</item>
        <item>operatorpvp_tachanka_turretkill</item>
        <item>operatorpvp_tagger_tagdevice_spot</item>
        <item>operatorpvp_thatcher_gadgetdestroywithemp</item>
        <item>operatorpvp_thermite_chargedeployed</item>
        <item>operatorpvp_thermite_chargekill</item>
        <item>operatorpvp_thermite_reinforcementbreached</item>
        <item>operatorpvp_twitch_gadgetdestroybyshockdrone</item>
        <item>operatorpvp_twitch_shockdronekill</item>
        <item>operatorpvp_valkyrie_camdeployed</item>
    </string-array>
</resources>