<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_compare"
        android:icon="@drawable/ic_compare"
        android:title="@string/title_compare"/>


    <item
        android:id="@+id/navigation_operators"
        android:icon="@drawable/ic_operators"
        android:title="@string/title_operators"/>


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>


    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"/>


    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more"/>


</menu>