<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/navigation_compare"
        icon="@drawable/ic_compare"
        title="@string/title_compare"
        barColorWhenSelected="@color/colorCompareTab"
        activeColor = "@color/colorCompareText"
        inactiveColor = "@color/colorNavBarText"/>


    <tab
        id="@+id/navigation_operators"
        icon="@drawable/ic_operators"
        title="@string/title_operators"
        barColorWhenSelected="@color/colorOperatorTab"
        activeColor = "@color/colorOperatorText"
        inactiveColor = "@color/colorNavBarText"/>


    <tab
        id="@+id/navigation_profile"
        icon="@drawable/ic_profile"
        title="@string/title_profile"
        barColorWhenSelected="@color/colorProfileTab"
        activeColor = "@color/colorProfileText"
        inactiveColor = "@color/colorNavBarText"/>

    <tab
        id="@+id/navigation_search"
        icon="@drawable/ic_search"
        title="@string/title_search"
        barColorWhenSelected="@color/colorSearchTab"
        activeColor = "@color/colorSearchText"
        inactiveColor = "@color/colorNavBarText"/>


    <tab
        id="@+id/navigation_more"
        icon="@drawable/ic_more"
        title="@string/title_more"
        barColorWhenSelected="@color/colorMoreTab"
        activeColor = "@color/colorMoreText"
        inactiveColor = "@color/colorNavBarText"/>
</tabs>