<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/casualKillsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:text="@string/casualKills"
        android:textSize="@dimen/statTitleSize"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/casualKillsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualKillsTitle" />

    <TextView
        android:id="@+id/casualDeathsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsLargeMargin"
        android:textSize="@dimen/statTitleSize"
        android:text="@string/casualDeaths"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualKillsText" />

    <TextView
        android:id="@+id/casualDeathsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualDeathsTitle" />

    <TextView
        android:id="@+id/casualKDTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsLargeMargin"
        android:textSize="@dimen/statTitleSize"
        android:text="@string/casualKD"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualDeathsText" />

    <TextView
        android:id="@+id/casualKDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginBottom="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualKDTitle" />

    <TextView
        android:id="@+id/casualWinsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:text="@string/casualWins"
        android:textSize="@dimen/statTitleSize"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/casualWinsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualWinsTitle" />

    <TextView
        android:id="@+id/casualLossesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsLargeMargin"
        android:textSize="@dimen/statTitleSize"
        android:text="@string/casualLosses"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualWinsText" />

    <TextView
        android:id="@+id/casualLossesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualLossesTitle" />

    <TextView
        android:id="@+id/casualWLTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsLargeMargin"
        android:textSize="@dimen/statTitleSize"
        android:text="@string/casualWL"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualLossesText" />

    <TextView
        android:id="@+id/casualWLText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginBottom="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/casualWLTitle" />

    <TextView
        android:id="@+id/casualLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsMargin"
        android:textSize="@dimen/statTitleSize"
        android:text="@string/level"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="@id/rightGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/casualLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="@id/rightGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casualLevelTitle" />

    <TextView
        android:id="@+id/casualPlayedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsLargeMargin"
        android:textSize="@dimen/statTitleSize"
        android:text="@string/casualPlayed"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="@id/rightGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/casualLevelText" />

    <TextView
        android:id="@+id/casualPlayedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="@id/rightGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casualPlayedTitle" />

    <TextView
        android:id="@+id/casualTimePlayedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginTop="@dimen/statsLargeMargin"
        android:textSize="@dimen/statTitleSize"
        android:text="@string/casualTimePlayed"
        android:textColor="@color/colorStatTitle"
        app:layout_constraintStart_toStartOf="@id/rightGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casualPlayedText" />

    <TextView
        android:id="@+id/casualTimePlayedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/statsMargin"
        android:layout_marginEnd="@dimen/statsMargin"
        android:layout_marginBottom="@dimen/statsMargin"
        android:textSize="@dimen/statTextSize"
        app:layout_constraintStart_toStartOf="@id/rightGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casualTimePlayedTitle" />

</android.support.constraint.ConstraintLayout>